# cpp-template

./: CMakeLists.txt  README.md
include/: version.h
include/component/: comp.h
src/component/: CMakeLists.txt  comp.cpp  comp.h
src/main/: CMakeLists.txt  main.cpp
tools/: auto-build.sh
tools/version/: version-inc.py  version.h  version.template  version_config.json
